M    src/test/java/org/picofarad/sdr101/FirFilterTest.java M    src/main/java/org/picofarad/sdr101/FirFilter.java
	*) Moved from ArrayList to LinkedList for the FIFO. Increased size of
	testing data to easier make performance judgements.


git-svn-id: svn+ssh://ginandtonic.no/home/kms/.svnrepos/sdr101-java@753 bec0a6a6-59ba-0310-824c-86e0bd1f4ed1