@@ -2,14 +2,15 @@ package org.picofarad.sdr101;
 
 import java.util.List;
 import java.util.ArrayList;
+import java.util.LinkedList;
 
 public class FirFilter implements SignalBlock {
     private List<Double> coefficients;
-    private List<Double> buffer;
+    private LinkedList<Double> buffer;
     private SignalBlock source;
 
     public FirFilter(List<Double> f) {
-	buffer = new ArrayList<Double>();
+	buffer = new LinkedList<Double>();
 	coefficients = f;
 	source = new NullSource();
 	fillBuffer();
@@ -28,8 +29,8 @@ public class FirFilter implements SignalBlock {
     public double out() {
 	double d = 0.0;
 
-	buffer.add(0, source.out());
-	buffer.remove(buffer.size() - 1);
+	buffer.addFirst(source.out());
+	buffer.removeLast();
 
 	for (int i = 0; i < coefficients.size(); i++) {
 	    d += buffer.get(i) * coefficients.get(i);
